# textum

./: CHANGELOG.md  Cargo.toml  Justfile
.github/workflows/: CI.yml  binaries.yml  deploy.yml
.just/: cargo.just  hooks.just  release-py.just  release.just
crates/textum/: Cargo.toml
crates/textum-py/: Cargo.toml  pyproject.toml
crates/textum-py/src/: lib.rs
docs/journal/: 2025-11-03-bounded-snippet-targetting-10.md  2025-11-04-boundary-resolution-15.md  2025-11-04-patch-snippet-integration-17.md  2025-11-04-snippet-replacement-16.md
src/: cli.rs  composer.rs  lib.rs  patch.rs  snip.rs
src/snip/: snippet.rs  target.rs
src/snip/snippet/: boundary.rs  error.rs  replacement.rs  resolution.rs
src/snip/snippet/boundary/: error.rs  extent.rs  mode.rs  resolution.rs
src/tests/: boundary_extent.rs  boundary_resolution.rs  composer.rs  patch.rs  snippet_integration.rs  snippet_replacement.rs  snippet_resolution.rs  target_matching.rs
tests/: cli_help.rs  cli_integration.rs  doctest_examples.rs  patch_roundtrip.rs
